Renombrado DTO a dto